make the trends use 80% of screen instead of fixed amount so things stretch properly

--- a/src/client/styles/App.css
+++ b/src/client/styles/App.css
@@ -1,7 +1,7 @@
 .App {
   font-family: 'Roboto', sans-serif;
   margin: 0;
-  padding: 0
+  padding: 0;
 }
 
 .App div {
